--- a/tig_client/src/index.css
+++ b/tig_client/src/index.css
@@ -1,13 +1,33 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'FinkHeavy';
+  src: url('./fonts/FinkHeavy.eot');
+  src: url('./fonts/FinkHeavy.eot?#iefix') format('embedded-opentype'),
+      url('./fonts/FinkHeavy.woff2') format('woff2'),
+      url('./fonts/FinkHeavy.woff') format('woff'),
+      url('./fonts/FinkHeavy.ttf') format('truetype'),
+      url('./fonts/FinkHeavy.svg#FinkHeavy') format('svg');
+  font-weight: 900;
+  font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'Allan';
+  src: url('./fonts/Allan-Regular.eot');
+  src: url('./fonts/Allan-Regular.eot?#iefix') format('embedded-opentype'),
+      url('./fonts/Allan-Regular.woff2') format('woff2'),
+      url('./fonts/Allan-Regular.woff') format('woff'),
+      url('./fonts/Allan-Regular.ttf') format('truetype'),
+      url('./fonts/Allan-Regular.svg#Allan-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+* {
+  font-family: 'Allan';
+}
+
+body {
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
