--- a/tig_client/src/index.css
+++ b/tig_client/src/index.css
@@ -6,7 +6,7 @@
       url('./fonts/FinkHeavy.woff') format('woff'),
       url('./fonts/FinkHeavy.ttf') format('truetype'),
       url('./fonts/FinkHeavy.svg#FinkHeavy') format('svg');
-  font-weight: 900;
+  font-weight: normal;
   font-style: normal;
 }
 
@@ -20,10 +20,6 @@
       url('./fonts/Allan-Regular.svg#Allan-Regular') format('svg');
   font-weight: normal;
   font-style: normal;
-}
-
-* {
-  font-family: 'Allan';
 }
 
 body {
