--- a/tig_client/src/app/Index.css
+++ b/tig_client/src/app/Index.css
@@ -6,10 +6,24 @@ h1 {
 
 .clear-body {
     position: fixed;
-    top: 2%;
+    top: 10%;
     left: 2%;
     bottom: 1%;
     right: 2%;
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.404);
+}
+
+.clear-body > .btn, .btn-primary, .btn-danger {
+    opacity: 0.7;
+    font-size: large;
+}
+
+.clear-body > .table {
+    background-color: rgba(255, 255, 255, 0.795);
+    width: 75%;
+}
+
+.clear-body > * {
+    margin: 2%;
 }
