--- a/tig_client/src/admin/users/Index.css
+++ b/tig_client/src/admin/users/Index.css
@@ -1,12 +1,12 @@
-.users {
-    margin-top: 10%;
-    font-size: x-large;
-}
-
 .users > h2 {
     margin-bottom: 5%;
+    text-align: center;
 }
 
 .users > .btn, .btn-primary {
     opacity: 0.7;
+}
+
+.table {
+    background-color: rgba(255, 255, 255, 0.733);
 }
