--- a/tig_client/src/app/Index.css
+++ b/tig_client/src/app/Index.css
@@ -1,17 +1,18 @@
-h1 {
+.app > p {
     font-family: "FinkHeavy";
-    margin: 2%;
-    font-size: 3vw;
+    padding: 2%;
+    color: white;
 }
 
 .clear-body {
-    position: fixed;
+    /* position: fixed;
+    height: fit-content;
     top: 10%;
     left: 2%;
     bottom: 1%;
     right: 2%;
     border-radius: 20px;
-    background-color: rgba(255, 255, 255, 0.404);
+    background-color: rgba(255, 255, 255, 0.404); */
 }
 
 .clear-body > .btn, .btn-primary, .btn-danger {
