--- a/tig_client/src/profile/Index.css
+++ b/tig_client/src/profile/Index.css
@@ -1,8 +1,22 @@
-.profile {
-    margin-top: 10%;
-    font-size: x-large;
+.container-full-bg {
+    background-color: rgba(255, 255, 255, 0.534);
+    border-radius: 20px;
 }
 
-.profile > h2 {
-    margin-bottom: 5%;
+.jumbotron {
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.822);
+}
+
+
+/* Desktops and laptops ----------- */
+@media only screen 
+and (min-width : 1224px) {
+/* Styles */
+}
+
+/* Large screens ----------- */
+@media only screen 
+and (min-width : 1824px) {
+/* Styles */
 }
