using external api for critters

--- a/tig_client/src/index.css
+++ b/tig_client/src/index.css
@@ -38,3 +38,10 @@ body {
 *{
     font-family: "Allan";
 }
+
+.admin-nav {
+    padding-top: 0;
+    padding-bottom: 0;
+    background-color: #e8e9ea9a;
+    border-bottom: 1px solid #ccc;
+}
