added more detail to critters + search bar

--- a/tig_client/src/critters/Index.css
+++ b/tig_client/src/critters/Index.css
@@ -1,3 +1,11 @@
-.designs > * {
+.critters > * {
     text-align: center;
+}
+
+.jumbotron > *, .card-body > * {
+    font-size: x-large;
+}
+
+.input-group {
+    margin-bottom: 2%;
 }
